# solocoder-5289-python-data-cube

./: .env.example  .gitignore  NEXT_PROMPT_R1.txt  PROMPT.txt  pyproject.toml  requirements.txt
app/: config.py  data_generator.py  main.py  models.py
app/api/: __init__.py  admin_routes.py  cube_routes.py  cube_service.py  deps.py  query_routes.py
app/cache/: __init__.py  query_cache.py
app/engine/: __init__.py  filter_builder.py  olap_engine.py
app/permissions/: __init__.py  permission_manager.py
app/refresh/: __init__.py  refresh_manager.py
app/storage/: __init__.py  metadata_db.py  metadata_store.py  parquet_store.py
tests/: conftest.py  test_api.py  test_cache.py  test_cube_service.py  test_filter_builder.py  test_olap_engine.py  test_permissions.py
