[project]
name = "polars-olap-cube"
version = "1.0.0"
description = "Polars-powered OLAP Cube Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "APScheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pydantic]
config = "none"
